added `Arguments#getLast`